<resources>
    <string name="app_name">WalkingBuddiesDogEdition</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_member">not a pawmbler ?</string>
    <string name="walking_buddies">Walking Buddies</string>
    <string name="app_logo">app logo</string>
    <string name="pawmble">Pawmble</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="let_s_find_you_a_walking_buddy">Let\'s find you a walking buddy!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name"> Pet\'s Name</string>
    <string name="hint_age">Something fun about me is…</string>
    <string name="hint_gender">"I am a"</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_size">My size is </string>
    <string name="hint_size_s">Small</string>
    <string name="hint_size_m">Medium</string>
    <string name="hint_size_l">Large</string>
    <string name="hint_preferred_size">Preferred buddy size</string>
    <string name="sign_out">Sign out</string>
    <string name="apply">Submit</string>
    <string name="default_profile_pic_description">default profile pic</string>
    <string name="error_profile_incomplete">Please complete your profile</string>
    <string name="boop_the_snoot">Boop the snoot</string>
    <string name="no_available_doggos">Nothing to smell here - go to messages or try again later</string>
    <string name="send_button_text">SEND</string>
    <string name="hint_message">Get your human to start this chat</string>
    <string name="dislike_icon">dislike icon</string>
    <string name="like_icon">like icon</string>
    <string name="dog_s_name">Dog\'s name</string>
    <string name="your_match_is">wants to be your walking buddy…</string>
    <string name="boop_the_snoot_to_chat">boop the snoot to chat</string>
    <string name="picture_of_matched_dog">picture of matched dog</string>
    <string name="profile_pic_in_chat_page">profile pic in chat page</string>
    <string name="my_size_is">My size is :</string>
    <string name="abark_me">Abark me:</string>
</resources>